--- a/pyproject.toml
+++ b/pyproject.toml
@@ -8,6 +8,8 @@ readme = "README.md"
 [tool.poetry.dependencies]
 python = "^3.12"
 django = "^5.1"
+psycopg2 = "^2.9.9"
+ipython = "^8.26.0"
 
 
 [build-system]
