--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,8 @@ python = "^3.12"
 django = "^5.1"
 psycopg2 = "^2.9.9"
 ipython = "^8.26.0"
+black = "^24.8.0"
+pillow = "^10.4.0"
 
 
 [build-system]
