--- a/pyproject.toml
+++ b/pyproject.toml
@@ -13,6 +13,7 @@ ipython = "^8.26.0"
 pillow = "^10.4.0"
 chardet = "^5.2.0"
 python-decouple = "^3.8"
+pytils = "^0.4.1"
 
 
 [tool.poetry.group.dev.dependencies]
